# tiny-dnn-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md
scripts/: README.md  json2md.py
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt  bvlc_reference_caffenet.cpp  bvlc_reference_caffenet.prototxt.in  bvlc_reference_caffenet_sources.txt.in
src/cmake/: FindvecLib.cmake  Resources.cmake  bvlc_reference_caffenet_resources.cmake
src/tests/: CMakeLists.txt  tiny_dnn_forward.cpp
